# discord-py-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config-default.yml  config.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  lint-type-format.yml
bot/: Makefile  __init__.py  __main__.py  bot.py  constants.py  log.py
bot/exts/info/: ping.py
bot/utils/: extensions.py
