[tool.poetry]
name = "discord-py-template"
version = "0.1.0"
description = "This repository is meant to serve as a template for making new or improving existing Discord bots. This template is build to enhance the building of a Discord bot using the discord.py library."
authors = ["Enrique Bos <enriquebos7090@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "discord_py_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
